Fix touch/mouse events on mobile
hopefully

it's sooo complicated

--- a/frontend/src/screens/App/screens/ViewerPane/components/Overlay/Overlay.less
+++ b/frontend/src/screens/App/screens/ViewerPane/components/Overlay/Overlay.less
@@ -10,6 +10,7 @@
 .overlayContent {
   width: 100%;
   height: 100%;
+  z-index: 2;
 
   .fadeTransition();
 }
